# tide-basic-crud

./: Cargo.toml
public/css/: custom.css
public/js/: api.js
src/: main.rs
src/controller/: dino.rs  mod.rs  views.rs
src/handlers/: dino.rs
templates/: index.html  layout.html
