[package]
name = "tide-basic-crud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
futures = "0.3.16"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tide = "0.16.0"
