[package]
name = "tide-basic-crud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.1"
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.16"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.5.5", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid"]}
tide = "0.16.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.9.0"
surf = "2.2.0"
